--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #111e1f;
+  background-color: #16181a;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
