--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+:root {
+    --primary-color: #86d1d6;
+    --secondary-color: #e0e0e0;
+    --bgcolor-dark: #16181a;
+    --bgcolor-light: #f5f5f5;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app {
+    min-height: 100vh;
+    width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container {
+    /* max-width: 1600px; */
+    margin: auto;
 }
 
-.App-header {
-  background-color: #16181a;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header {
+    background-color: var(--bgcolor-light);
+    padding: 0.5rem 1rem;
 }
 
-.App-link {
-  color: #86D1D6;
+.content {
+    padding: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title{
+    margin: 0 0 1rem
 }
